--- a/src/Styles/router/main.scss
+++ b/src/Styles/router/main.scss
@@ -14,7 +14,9 @@
         // margin-top: 20px;
         // margin-bottom: 20px;
     }
-
+    .WinLoseChart{
+      
+    }
 
 
 
@@ -62,7 +64,6 @@
         display:flex;
         margin-left:auto;
         width: 40px;
-        height: 30px;
         align-items: center;
         border: none;
         background-color: black;
@@ -174,37 +175,50 @@
     }    
     
     .summonerMatchWin{
-
         display: flex;
-        width:780px;
-        background-image:linear-gradient(45deg, rgba(0,136,204, 0.9), rgba(0,136,204, 0.6));
-        margin: 0 auto;
+        width: 150px;
+        height: 220px;
+        background-image:linear-gradient(rgba(0,136,204, 0.9), rgba(0,136,204, 0.6));
+        margin: auto;
         margin-bottom: 20px;
+        margin-right: 10px;
+        margin-left: 10px;
+        padding-top: 10px;
         align-items: center;
+        text-align: center;
+        display: inline-block;
+        vertical-align: middle;
         box-shadow: rgba(0, 0, 33, 0.05) 0px 30px 60px 12px;
 
     }
 
     .summonerMatchLose{
         display: flex;
-        width:780px;
-        background-image: linear-gradient(45deg, rgba(220,1,30, 0.9), rgba(220,1,30, 0.6));
+        width: 150px;
+        height: 220px;
+        background-image: linear-gradient(rgba(220,1,30, 0.9), rgba(220,1,30, 0.6));
         margin: 0 auto;
         margin-bottom: 20px;
+        margin-right: 10px;
+        margin-left: 10px;
+        padding-top: 10px;
         align-items: center;
+        text-align: center;
+        display: inline-block;
+        vertical-align: middle;
         box-shadow: rgba(0, 0, 33, 0.05) 0px 30px 60px 12px;
 
     }
 
+    .summonerMatchRank{
+        font-size:30px;
+        padding-top: px;
+        display: block;
+    }
     .summonerMatchKDA{
         font-size:30px;
-        padding-left: 20px;
-
-    }
-    .summonerMatchRank{
-        font-size:40px;
-        margin-left:auto;
-        padding-right: 20px;
+        padding-top: px;
+        display: block;
     }
 
 
